# python-demo

./: .gitignore  Dockerfile-python  README.md  build-python.sh  entry.sh  pyproject.toml  run.sh  test.sh  veilid-server  veilid-server-config  veilid-server-exec  veilid-server-logs  veilid-server-stop
veilid_demo/: chat.py  config.py
