[tool.poetry]
name = "veilid-demo"
version = "0.2.0"
description = "Demonstrate the Veilid decentralized application framework"
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "veilid_demo"}]

[tool.poetry.dependencies]
python = ">=3.12.5,<4.0"
veilid = ">=0.4.1"

[tool.poetry.scripts]
chat = 'veilid_demo.chat:handle_command_line'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
